Update Tailwind CLI commands in main.latte

--- a/templates/base/include/main.latte
+++ b/templates/base/include/main.latte
@@ -6,8 +6,8 @@
         </div>
         <p>This template is built with <a class="link" target="_blank" href="https://latte.nette.org/">Latte</a> and <a class="link" target="_blank" href="https://tailwindcss.com/">Tailwind</a>. To get started with your styles, just jump into your template folder and run the Tailwind CLI:</p>
         <div class="mockup-code w-full">
-            <pre><code>cd templates/base</code></pre>
-            <pre><code>npx @tailwindcss/cli -i css/input.css -o css/output.css --watch</code></pre>
+            <pre><code>cd templates</code></pre>
+            <pre><code>npx @tailwindcss/cli -i base/css/input.css -o base/css/output.css --watch</code></pre>
         </div>
         <div>
             <a href="https://ivy.dooper.io" target="_blank" class="btn btn-primary">
